hydra/test/test_examples/type_errors/local_dec_dup.tpc
tele bit<32> x;
init {
   bool x = true;
} 
telemetry {} 
check {}